[package]
name = "rust-car"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipld = { version = "0.15.0", package = "libipld"}
ipld-cbor = {version = "0.15.0", package = "libipld-cbor"}
thiserror = "1.0.38"
cid = "0.9"
integer-encoding = "3.0.4"
bytes = "1.4.0"
quick-protobuf = { default-features = false, features = ["std"], version = "0.8" }

